--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="hero-content">
-      <h1>Hello, I'm <span>Nanthini Mohan</span></h1>
+      <h1>Hello, I'm <span>thomas samson</span></h1>
       <p>A passionate student learning web development</p>
       <a href="#projects" class="btn">View My Work</a>
     </div>
@@ -38,9 +38,8 @@
   <section id="about" class="about">
     <h2>About Me</h2>
     <div class="about-content">
-      <img src="Nanthini M2.jpeg" alt="Profile Photo">
-      <p>I am a student enthusiastic about technology and design.
-        I love building interactive, user-friendly web applications and exploring new tools in the tech world.</p>
+      <img src="thomas.jpg" alt="Profile Photo">
+      <p>I am thomas samson A passionate computer science student currently pursuing my bachelor of computer science BSc at madras university with a intrest intechnology and programming.I strive to build foundation in computer science principles and praticals skills that will help me make a meaning full impact in the teach world .</p>
     </div>
   </section>
 
@@ -67,8 +66,8 @@
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
     <form id="contact-form">
-      <input type="text" id="name" placeholder="Your Name" required>
-      <input type="email" id="email" placeholder="Your Email" required>
+      <input type="text" id="name" placeholder="thomas samson" required>
+      <input type="email" id="email" placeholder="thomassamson0022@gmail.com" required>
       <textarea id="message" placeholder="Your Message" required></textarea>
       <button type="submit">Send</button>
     </form>
@@ -76,11 +75,12 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name | All rights reserved</p>
+    <p>&copy; 2025 thomas samson | All rights reserved</p>
   </footer>
 
 </body>
 
 </html>
+
 
 
